--- a/report/references.bib
+++ b/report/references.bib
@@ -42,14 +42,34 @@
  keywords = {Symbolic computation, numeric computation, ill-conditioned, algebraic equation},
 }
 
+@inproceedings{Taylor,
+  title={Modular Algorithms in Symbolic Summation and Symbolic Integration},
+  author={J. Gerhard},
+  booktitle={Lecture Notes in Computer Science},
+  year={2004},
+  pages = {42-49}
+}
+
 @online{Budan,
   title = {Budan's theorem},
   url = {https://en.wikipedia.org/wiki/Budan%27s_theorem},
   note = {Last edited: 2020-12-31}
 }
 
+@online{Vincent,
+  title = {Continued fraction method},
+  url = {https://en.wikipedia.org/wiki/Real-root_isolation#Continued_fraction_method},
+  note = {Last edited: 2020-12-31}
+}
+
 @online{Lag,
-  title = {Lagrange's bounds},
-  url = {https://en.wikipedia.org/wiki/Geometrical_properties_of_polynomial_roots#cite_note-2},
+  title = {Lagrange's bounds}, 
+  url   = {https://en.wikipedia.org/wiki/Geometrical_properties_of_polynomial_roots#Lagrange's_and_Cauchy's_bounds},
+  note  = {Last edited: 2021-3-9}
+}
+
+@online{rule_of_sign,
+  title = {Descartes’ rule of signs},
+  url = {https://en.wikipedia.org/wiki/Descartes%27_rule_of_signs},
   note = {Last edited: 2021-3-9}
 }
